[tool.poetry]
name = "hyrl-mp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.24.1"
matplotlib = "3.8.0"
scikit-learn = "1.3.1"
stable-baselines3 = "2.1.0"
imageio = "2.33.1"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
